Thu Nov 21 00:58:04 EST 1996    Richard Basch   <basch@lehman.com>

        * Makefile.in: Win32 build

	* c_ustime.c: The Win32 time calculation is different from DOS'
		so the DOS version shouldn't be trying to use the same
		part of the ifdef.

	* rnd_confoun.c: Fix function declaration (win32)

Sun Dec 29 21:54:42 1996  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to use new library building procedure.

Wed Jun 12 00:12:52 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* c_ustime.c: Fix WIN32 to be _WIN32

	* c_localaddr.c: Add #ifdef _WIN32 in places where we had #ifdef _MSDOS
	

Sat Feb 24 00:34:15 1996  Theodore Y. Ts'o  <tytso@dcl>

	* c_ustime.c (krb5_crypto_us_timeofday): Add Windows 95/NT time
		function.  (Does this time function work under Windows?
		We'll find out....)

Thu Feb 15 10:57:27 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* c_localaddr.c: Set magic number in krb5_address.

Fri Oct  6 22:00:48 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Remove ##DOS!include of config/windows.in.
		config/windows.in is now included by wconfig.

Mon Sep 25 16:49:15 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Removed "foo:: foo-$(WHAT)" lines from the
		Makefile. 

Fri Sep 22 12:00:00 1995  James Mattly  <mattly@fusion.com>

	* c_localaddr.c:  change close on a socket to closesocket, sockets on
		macintosh arn't files

Wed Sep 13 10:33:53 1995 Keith Vetter (keithv@fusion.com)

	* Makefile.in: PC builds all C files because of function name changes.
	* c_localtime.c, c_ustime.c: removed INTERFACE keyword.

Wed Sep 13 17:32:36 1995  Theodore Y. Ts'o  <tytso@dcl>

	* c_localaddr.c (krb5_crypto_os_localaddr): Clear the buffer
		before calling the SIOCGIFCONF ioctl.  This makes purify
		happy.

Thu Sep  7 12:00:00 1995  James Mattly <mattly@fusion.com>
	
	* Renamed ustime.c to c_ustime.c
	* Renamed localaddr.c to c_localaddr.c because Mac can't have
	  two files with the same name.